Outline React notes

--- a/posts/software/react/23_deployment/post.qmd
+++ b/posts/software/react/23_deployment/post.qmd
@@ -1,5 +1,5 @@
 ---
-title: "React: JavaScript Essentials"
+title: "React: TypeScript Essentials"
 description: "React Complete Guide: Section 2"
 date: "2024-03-20"
 image: "../react.png"
@@ -7,4 +7,4 @@ categories: [Engineering, Software, React, WebDev]
 draft: true
 ---
 
-# Styling and Profiling
+# Deploying React Apps
