--- a/posts/software/react/1_getting_started/post.qmd
+++ b/posts/software/react/1_getting_started/post.qmd
@@ -1,6 +1,6 @@
 ---
-title: "React: Getting Started"
-description: "React Complete Guide: Section 1"
+title: "React: A Gentle Introduction"
+description: "Getting Started with React"
 date: "2024-03-12"
 image: "../react.png"
 categories: [Engineering, Software, React, WebDev]
